Fixed an issue with an empty configuration file. Fixed TOC overflow issues.

--- a/bls_bible/static/css/site.css
+++ b/bls_bible/static/css/site.css
@@ -956,6 +956,8 @@ code {
     margin-top: 15px;
     border-color: var(--highlight-font);
     border-width: 0px 1px 0px 0px;
+    max-height: 80vh;
+    overflow: auto;
 }
 
 .editor-toolbar.fullscreen {
